dhall/tests/type-inference/failure/unit/FunctionArgumentTypeNotAType.txt
Type error: error: Expected a type, found: `1`
 --> <current file>:1:6
  |
1 | λ(_ : 1) → _
  |       ^ this has type: `Natural`
  |
  = help: An expression in type position must have type `Type`, `Kind` or `Sort`
